# 1.-Studienarbeit---KI-auf-ESP32

./: 1.Studienarbeit-Workspace.code-workspace  README.md
1. Studienarbei/src/: main.cpp
ESP32-CAM_Programm/: .gitignore  CMakeLists.txt  huge_app.csv  platformio.ini  sdkconfig.esp32cam  sdkconfig.esp32cam.old
ESP32-CAM_Programm/include/: credentials.h
ESP32-CAM_Programm/lib/camera/: camera_init.cpp  camera_init.h
ESP32-CAM_Programm/lib/person_detection/: person_detection.cpp  person_detection.h
ESP32-CAM_Programm/lib/webserver/: webserver.cpp  webserver.h  wifi_manager.cpp  wifi_manager.h
ESP32-CAM_Programm/src/: CMakeLists.txt  credentials.h  main.c  main.cpp
ESP32-Wroom-32_Programm/: CMakeLists.txt  platformio.ini
ESP32-Wroom-32_Programm/src/: main.cpp  mnist_model_data.h  model_data.h  model_data_2.h
MLPerf Teensy 4.0/: platformio.ini
MLPerf Teensy 4.0/src/: main.cpp
MLPerf_Arduino_Giga/: platformio.ini
MLPerf_Arduino_Giga/src/: main.cpp
MLPerf_ESP32-S3/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.nano_esp32_s3.old  sdkconfig.nano_s3_energy
MLPerf_ESP32-S3/src/: CMakeLists.txt  main.cpp
MLPerf_ESP32-Wroom-32/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.lolin_d32_energy  sdkconfig.lolin_d32_perf
MLPerf_ESP32-Wroom-32/src/: main.cpp
Python Modellerstellung/DataVisualizer/: energy_visualizer.py  latex_visualiizer.py  preis_leistung_visualizer.py  throughput_visualizer.py
Python Modellerstellung/MNIST/: MNIST_Modellersteller.py  MNIST_data.py  mnist_cnn.tflite
(+123 files in other folders)
